通过在rest层上方加一个api层，后续swarm化会方便一些，但也使得rest层缺失了部分细节，无法再由URI找到具体的方法。 具体用法参考：https://github.com/lWoHvYe/spring-cloud-lwohvye/commit/0ead319c5bde9a91a18e019135d0797e3d2a8243